{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 68,
  "lineage": "4e49a699-4ce6-c9bf-51ba-0a05efb530b2",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a97c3f03df98422",
            "arn": "arn:aws:ec2:us-east-1:381492049685:elastic-ip/eipalloc-06a97c3f03df98422",
            "association_id": "eipassoc-0a29ce065abb21ed1",
            "domain": "vpc",
            "id": "eipalloc-06a97c3f03df98422",
            "network_border_group": "us-east-1",
            "network_interface": "eni-097224aa5cf6f500d",
            "private_dns": "ip-10-10-1-168.ec2.internal",
            "private_ip": "10.10.1.168",
            "public_dns": "ec2-54-163-178-10.compute-1.amazonaws.com",
            "public_ip": "54.163.178.10",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-eip-nat-0",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-eip-nat-0",
              "Owner": "DevTeam",
              "Project": "km"
            }
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:internet-gateway/igw-07d10f6ea8e0e6157",
            "id": "igw-07d10f6ea8e0e6157",
            "owner_id": "381492049685",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-igw",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-igw",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a97c3f03df98422",
            "association_id": "eipassoc-0a29ce065abb21ed1",
            "connectivity_type": "public",
            "id": "nat-0146a3939348efc88",
            "network_interface_id": "eni-097224aa5cf6f500d",
            "private_ip": "10.10.1.168",
            "public_ip": "54.163.178.10",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc92a0d65e4e0aa3",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-nat-0",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-nat-0",
              "Owner": "DevTeam",
              "Project": "km"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-091d96ee28428c3251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0146a3939348efc88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-091d96ee28428c325",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d3b76d30fcbe01d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0146a3939348efc88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-05d3b76d30fcbe01d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07d10f6ea8e0e6157",
            "id": "r-rtb-0477cda71d0e8c99e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0477cda71d0e8c99e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:route-table/rtb-091d96ee28428c325",
            "id": "rtb-091d96ee28428c325",
            "owner_id": "381492049685",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0146a3939348efc88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-private-0",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-private-0",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:route-table/rtb-05d3b76d30fcbe01d",
            "id": "rtb-05d3b76d30fcbe01d",
            "owner_id": "381492049685",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0146a3939348efc88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-private-1",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-private-1",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:route-table/rtb-0477cda71d0e8c99e",
            "id": "rtb-0477cda71d0e8c99e",
            "owner_id": "381492049685",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d10f6ea8e0e6157",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-public",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-rtb-public",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666c3ab222c42c67",
            "region": "us-east-1",
            "route_table_id": "rtb-091d96ee28428c325",
            "subnet_id": "subnet-09d455c3041b916b2"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af8042fac9f61dca",
            "region": "us-east-1",
            "route_table_id": "rtb-05d3b76d30fcbe01d",
            "subnet_id": "subnet-0fe19bd6c942084dd"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb714d5773b67dfd",
            "region": "us-east-1",
            "route_table_id": "rtb-0477cda71d0e8c99e",
            "subnet_id": "subnet-0bc92a0d65e4e0aa3"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062db7a6249a174e5",
            "region": "us-east-1",
            "route_table_id": "rtb-0477cda71d0e8c99e",
            "subnet_id": "subnet-07e7d99c1aac5101e"
          },
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:security-group/sg-02b60cf34653392af",
            "description": "Bastion SG - restrict to dev CIDR if provided",
            "egress": [],
            "id": "sg-02b60cf34653392af",
            "ingress": [],
            "name": "km-vpc-dev-useast1-sg-bastion",
            "name_prefix": "",
            "owner_id": "381492049685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-bastion",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-bastion",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:security-group/sg-087ce0c441e77e878",
            "description": "DB SG - allow mysql from eks nodes and optional dev cidr",
            "egress": [],
            "id": "sg-087ce0c441e77e878",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.229.141.205/32"
                ],
                "description": "CIDR DB access (dev only)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS nodes to talk to DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054fd4c3b9daec516"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "km-vpc-dev-useast1-sg-db",
            "name_prefix": "",
            "owner_id": "381492049685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-db",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-db",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:security-group/sg-054fd4c3b9daec516",
            "description": "EKS worker nodes SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054fd4c3b9daec516",
            "ingress": [],
            "name": "km-vpc-dev-useast1-sg-eks-nodes",
            "name_prefix": "",
            "owner_id": "381492049685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-eks-nodes",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-sg-eks-nodes",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devcidr_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "34.229.141.205/32"
            ],
            "description": "CIDR DB access (dev only)",
            "from_port": 3306,
            "id": "sgrule-805551963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-087ce0c441e77e878",
            "security_group_rule_id": "sgr-0a7734b248beb553a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.db_sg",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS nodes to talk to DB",
            "from_port": 3306,
            "id": "sgrule-3290588233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-087ce0c441e77e878",
            "security_group_rule_id": "sgr-003c4bed10aa06933",
            "self": false,
            "source_security_group_id": "sg-054fd4c3b9daec516",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.db_sg",
            "module.network.aws_security_group.eks_nodes_sg",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:subnet/subnet-09d455c3041b916b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d455c3041b916b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492049685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-private-us-east-1a",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/cluster/km": "owned"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-private-us-east-1a",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/cluster/km": "owned"
            },
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:subnet/subnet-0fe19bd6c942084dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe19bd6c942084dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492049685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-private-us-east-1b",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/cluster/km": "owned"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-private-us-east-1b",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/cluster/km": "owned"
            },
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:subnet/subnet-0bc92a0d65e4e0aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc92a0d65e4e0aa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492049685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-public-us-east-1a",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-public-us-east-1a",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:subnet/subnet-07e7d99c1aac5101e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e7d99c1aac5101e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492049685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-public-us-east-1b",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-subnet-public-us-east-1b",
              "Owner": "DevTeam",
              "Project": "km",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:vpc/vpc-0498349a3009de23a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f4eec8ca3ff659fd",
            "default_route_table_id": "rtb-051d97263a1eecd01",
            "default_security_group_id": "sg-0a590ea816af5ab87",
            "dhcp_options_id": "dopt-0abc75e589b8bde0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0498349a3009de23a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051d97263a1eecd01",
            "owner_id": "381492049685",
            "region": "us-east-1",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1",
              "Owner": "DevTeam",
              "Project": "km"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:vpc-endpoint/vpce-0714c49e2ae88c0b0",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0714c49e2ae88c0b0",
            "ip_address_type": "ipv4",
            "owner_id": "381492049685",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05d3b76d30fcbe01d",
              "rtb-091d96ee28428c325"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-vpce-s3",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-vpce-s3",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492049685:vpc-endpoint/vpce-08d046a60eec047e4",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_entry": [
              {
                "dns_name": "*.vpce-08d046a60eec047e4-83nhwwhu.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-08d046a60eec047e4-83nhwwhu-us-east-1a.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "*.vpce-08d046a60eec047e4-83nhwwhu-us-east-1b.s3.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08d046a60eec047e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09a74b53028dd11c6",
              "eni-0b2623dd73edbeeba"
            ],
            "owner_id": "381492049685",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a590ea816af5ab87"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.101.144",
                "subnet_id": "subnet-09d455c3041b916b2"
              },
              {
                "ipv4": "10.10.102.101",
                "subnet_id": "subnet-0fe19bd6c942084dd"
              }
            ],
            "subnet_ids": [
              "subnet-09d455c3041b916b2",
              "subnet-0fe19bd6c942084dd"
            ],
            "tags": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-vpce-ssm",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "tags_all": {
              "Component": "vpc",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "km-vpc-dev-useast1-vpce-ssm",
              "Owner": "DevTeam",
              "Project": "km"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0498349a3009de23a"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}